# sock-robot

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  flash.sh  sdkconfig.defaults
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: App.tsx  main.tsx
dashboard/src/components/: Chart.tsx  CurrentValues.tsx  StatusBar.tsx  TabBar.tsx  TimeWindowSelector.tsx
dashboard/src/hooks/: useIMUSocket.ts  useSampleRate.ts
dashboard/src/lib/: chartOptions.ts  colors.ts  types.ts
dashboard/src/styles/: app.css
scripts/: drive.py  imu_dashboard.py  serial_test.py
src/: main.rs
